tests/checker/diagnostics/0027_core_not_int_03.ml
let not (x : bool) : bool = x
let bad : bool = not 0
